--- a/form.html
+++ b/form.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>로그인폼</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>로그인 폼</h1>
@@ -19,7 +21,7 @@
         <p>
             <label for="password">암 호  : </label>
             <input type="password" name="password" id="password">
-            <input type="submit" value="로그인">
+            <input type="submit" class = "btn btn-secondary" value="로그인">
             <!-- http://127.0.0.1:5500/none?id=&password=&vehicle1=Bike&vehicle2=Car&vehicle3=Boat -->
             <!-- http://127.0.0.1:5500/none?id=&password=&vehicle1=1&vehicle2=2-->
             <input type="checkbox" id="vehicle1" name="vehicle1" value="1">
@@ -46,5 +48,15 @@
 
         </p>
     </form>
+    <!-- 부트스트랩 버튼 -->
+    <button type="button" class="btn btn-primary">Primary</button>
+    <button type="button" class="btn btn-secondary">Secondary</button>
+    <button type="button" class="btn btn-success">Success</button>
+    <button type="button" class="btn btn-danger">Danger</button>
+    <button type="button" class="btn btn-warning">Warning</button>
+    <button type="button" class="btn btn-info">Info</button>
+    <button type="button" class="btn btn-light">Light</button>
+    <button type="button" class="btn btn-dark">Dark</button>
+    <button type="button" class="btn btn-link">Link</button>
 </body>
 </html>
