--- a/js_ex6.html
+++ b/js_ex6.html
@@ -3,39 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>리스트 동적 제어하기</title>
     <script>
-        function Account (owner, code, balance) {
-            this.owner = owner;
-            this.code = code;
-            this.balance = balance;
+      function addList(event) {
+        event.preventDefault();
+        let list = document.getElementById("list");
+        let newItem = document.createElement("li");
+        newItem.innerHTML = document.form.item.value + 
+                "<span onclick='delList(this)'>X</span>";
+        list.appendChild(newItem);
+      }
 
-            this.inquiry = function () {return this.balance}
-            this.deposit = function (money) {this.balance += money;}
-            this.withdraw = function (money) {
-                this.balance -= money;
-                return money;
-            }
-        }
+      function delList(obj) {
+        let item = obj.parentElement;
+        let list = item.parentElement;
+        list.removeChild(item);
+      }
     </script>
 </head>
 <body>
-    <h3>Account 프로토타입 만들기</h3>
+    <h3>리스트 동적 제어하기</h3>
+    <form action="" name="form">
+      <input type="text" name="item">
+      <button onclick="addList(event)">추가</button>
+    </form>
     <hr>
-    <script>
-        let account = new Account("홍길동", "111", 35000);
-
-        document.write("account : ");
-        document.write(account.owner + ",");
-        document.write(account.code + ",");
-        document.write(account.balance + "<br>");
-
-        account.deposit(10000);
-        document.write("10000원 저금 후 잔액은 " + account.inquiry() + "<br>");
-        account.withdraw(5000);
-        document.write("5000원 인출 후 잔액은 " + account.inquiry() + "<br>");
-        
-    </script>
-    
+    <ul id="list"></ul>
 </body>
 </html>
