--- a/js_event3.html
+++ b/js_event3.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>마우스 관련 이벤트 리스너</title>
     <script>
-        function wheel(e, obj) {
-            let width = 1;
+        let width=1;
+        function wheel(e,obj){
             if(e.wheelDelta < 0) {
                 width--;
                 if(width<0) width=0;
@@ -14,10 +14,11 @@
                 width++;
                 if(width>10) width=10;
             }
-            obj.style.borderStyle = 'ridge';
+            obj.style.borderStyle = 'solid';
             obj.style.borderColor = 'black';
             obj.style.borderWidth = width + 'px';
         }
+        document.addEventListener("wheel",wheel);
     </script>
 </head>
 <body>
